# machine-learning

./: README.md  l03c01_classifying_images_of_clothing.ipynb
courses/udacity/: CatsAndDogsClassifierCNN.ipynb
courses/udacity/05_going_further_with_cnn/: dogs_vs_cats_workbook.ipynb
kaggle/competitions/: 001_mushroom_classifier
kaggle/competitions/Binary_Prediction_of_Poisonous_Mushrooms/: 001_mushroom_classifier.ipynb  mushroom_classifier_NN.ipynb  mushroom_clf_xgboost.ipynb
kaggle/competitions/s_05/ep_08/: notebook.ipynb
kaggle/competitions/s_06/ep_01/: notebook.ipynb
kaggle/competitions/s_06/ep_04/: .gitignore  main.py  pyproject.toml  s_06_ep_04_v01.ipynb
kaggle/competitions/s_06/ep_07/: .gitignore  baseline_v01.py  baseline_v02.py  baseline_v03.py  baseline_v04.py  baseline_v05.py  baseline_v06.py  baseline_v07.py  baseline_v08.py  baseline_v09.py  baseline_v10.py  baseline_v11.py  baseline_v12.py  pyproject.toml
models/fachion_mnist_cnn/: FashionMNIST_classifier.ipynb
models/gans/dc_gans/: 01_DCGAN_celebFaces_gray_64x64.ipynb  01_DCGAN_mnist.ipynb
