[project]
name = "ep-07"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "kaggle>=2.2.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]
